# rag-from-pdf

./: README.md  onereport.ipynb  pyproject.toml
