[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.13",
    "langchain-openai>=0.2.14",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3.4",
    "langgraph>=0.2.60",
    "markdown>=3.7",
    "markitdown>=0.0.1a3",
    "unstructured>=0.16.11",
]
